[tool.poetry]
name = "pysnooz"
version = "0.8.4"
description = "Control SNOOZ white noise machines."
authors = ["Austin Brunkhorst <pysnooz@alb.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/AustinBrunkhorst/pysnooz"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [{ include = "pysnooz", from = "src" }]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AustinBrunkhorst/pysnooz/issues"
"Changelog" = "https://github.com/AustinBrunkhorst/pysnooz/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10"
home-assistant-bluetooth = ">=1.3.0"
bluetooth-sensor-state-data = ">=1.5.0"
bleak-retry-connector = ">=3.0.2"
bleak = ">=0.20.2"
Events = "^0.4"
transitions = "^0.8.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.19.0"
freezegun = "^1.2.2"
pytest-mock = "^3.8.2"
pandas = "^1.4.3"
autopep8 = "^1.7.0"
flake8 = "^5.0.4"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/pysnooz/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=pysnooz --cov-report=term-missing:skip-covered"
pythonpath = ["src"]
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["pysnooz", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = ['setup.py']

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "freezegun.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
